--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-table/experiment-conditions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-table/experiment-conditions-table.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-conditions-table">
-  <p>{{ 'experiments.conditions.table.empty.text' | translate }}</p>
-  <!-- TODO: Implement conditions table -->
+<div class="table-container">
+  <p>experiment-conditions-table works!</p>
 </div>
