--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-table/experiment-decision-points-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-table/experiment-decision-points-table.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-decision-points-table">
-  <p>{{ 'experiments.decision-points.table.empty.text' | translate }}</p>
-  <!-- TODO: Implement decision points table -->
+<div class="table-container">
+  <p>experiment-decision-points-table works!</p>
 </div>
