--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data/experiment-enrollment-data.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data/experiment-enrollment-data.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-enrollment-data">
-  <p>{{ 'experiments.enrollment-data.empty.text' | translate }}</p>
-  <!-- TODO: Implement enrollment data visualization -->
+<div class="data-container">
+  <p>experiment-enrollment-data works!</p>
 </div>
