--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-exclusions-section-card/experiment-exclusions-table/experiment-exclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-exclusions-section-card/experiment-exclusions-table/experiment-exclusions-table.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-exclusions-table">
-  <p>{{ 'experiments.exclusions.table.empty.text' | translate }}</p>
-  <!-- TODO: Implement exclusions table using CommonDetailsParticipantListTableComponent -->
+<div class="table-container">
+  <p>experiment-exclusions-table works!</p>
 </div>
