--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-table/experiment-inclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-table/experiment-inclusions-table.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-inclusions-table">
-  <p>{{ 'experiments.inclusions.table.empty.text' | translate }}</p>
-  <!-- TODO: Implement inclusions table using CommonDetailsParticipantListTableComponent -->
+<div class="table-container">
+  <p>experiment-inclusions-table works!</p>
 </div>
