--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-data-section-card/experiment-metrics-data/experiment-metrics-data.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-data-section-card/experiment-metrics-data/experiment-metrics-data.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-metrics-data">
-  <p>{{ 'experiments.metrics-data.empty.text' | translate }}</p>
-  <!-- TODO: Implement metrics data visualization -->
+<div class="data-container">
+  <p>experiment-metrics-data works!</p>
 </div>
