--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-section-card/experiment-metrics-table/experiment-metrics-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-section-card/experiment-metrics-table/experiment-metrics-table.component.html
@@ -1,4 +1,3 @@
-<div class="experiment-metrics-table">
-  <p>{{ 'experiments.metrics.table.empty.text' | translate }}</p>
-  <!-- TODO: Implement metrics table -->
+<div class="table-container">
+  <p>experiment-metrics-table works!</p>
 </div>
