--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-table/experiment-decision-points-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-table/experiment-decision-points-table.component.scss
@@ -1,8 +1,3 @@
-.experiment-decision-points-table {
-  padding: 1rem;
-
-  p {
-    color: var(--text-secondary);
-    font-style: italic;
-  }
+.table-container {
+  padding: 32px;
 }
