--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data/experiment-enrollment-data.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data/experiment-enrollment-data.component.scss
@@ -1,8 +1,3 @@
-.experiment-enrollment-data {
-  padding: 1rem;
-
-  p {
-    color: var(--text-secondary);
-    font-style: italic;
-  }
+.data-container {
+  padding: 32px;
 }
