--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-data-section-card/experiment-metrics-data-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-data-section-card/experiment-metrics-data-section-card.component.html
@@ -1,15 +1,19 @@
-<app-common-section-card>
+<app-common-section-card *ngIf="selectedExperiment$ | async as experiment">
   <!-- header-left -->
   <app-common-section-card-title-header
     header-left
-    [title]="'experiments.metrics-data.title.text' | translate"
-    [subtitle]="'experiments.metrics-data.subtitle.text' | translate"
+    [title]="'experiments.details.metrics-data.card.title.text' | translate"
+    [subtitle]="'experiments.details.metrics-data.card.subtitle.text' | translate"
   ></app-common-section-card-title-header>
 
   <!-- header-right -->
   <app-common-section-card-action-buttons
     header-right
+    [showPrimaryButton]="false"
+    [showMenuButton]="(permissions$ | async)?.experiments.update"
+    [menuButtonItems]="menuButtonItems"
     [isSectionCardExpanded]="isSectionCardExpanded"
+    (menuButtonItemClick)="onMenuButtonItemClick($event, experiment)"
     (sectionCardExpandChange)="onSectionCardExpandChange($event)"
   >
   </app-common-section-card-action-buttons>
