--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/add-metrics/add-metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/add-metrics/add-metrics.component.html
@@ -15,8 +15,8 @@
     </mat-form-field>
     <div class="explainer-box">
       <span class="ft-14-400"
-        >Metrics are be added by context. Each JSON metric schema can be added here individually, or in an array.
-        Reference example placeholder value or
+        >Metrics are added by context. Each JSON metric schema can be added here individually, or in an array. Reference
+        example placeholder value or
         <a
           class="learn-more-link"
           href="https://upgrade-platform.gitbook.io/upgrade-documentation/developer-guide/reference/metrics"
