--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.html
@@ -216,7 +216,16 @@
                 [formGroupName]="queryIndex"
                 style="justify-content: flex-start"
               >
-                <mat-icon class="remove-icon" (click)="removeMetric(queryIndex)"> delete_outline </mat-icon>
+                <mat-icon
+                  class="remove-icon"
+                  [class.remove-icon--disabled]="isRewardMetric(queryIndex)"
+                  [attr.aria-disabled]="isRewardMetric(queryIndex)"
+                  [attr.tabindex]="isRewardMetric(queryIndex) ? -1 : 0"
+                  (click)="!isRewardMetric(queryIndex) && removeMetric(queryIndex)"
+                  (keydown)="$event.key === 'Enter' || $event.key === ' ' ? (!isRewardMetric(queryIndex) && removeMetric(queryIndex)) : null"
+                >
+                  delete_outline
+                </mat-icon>
               </mat-cell>
             </ng-container>
 
@@ -272,47 +281,23 @@
       <!-- Reward Metric Section -->
       <div class="reward-metric-container" *ngIf="isMoocletExperimentDesign$ | async">
         <span class="title">{{ 'home.new-experiment.metrics.reward-metric.text' | translate }}</span>
-        <mat-table class="reward-metric-table" [dataSource]="rewardMetricDataSource">
-          <!-- Metric Column -->
-          <ng-container matColumnDef="metricsKey">
-            <mat-header-cell class="ft-14-700" *matHeaderCellDef>
-              {{ 'query.metric.text' | translate }}
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row">
-              {{ row.metric_Key }}
-            </mat-cell>
-          </ng-container>
-
-          <!-- Statistic Column -->
-          <ng-container matColumnDef="metricsOperation">
-            <mat-header-cell class="ft-14-700" *matHeaderCellDef>
-              {{ 'monitor.statistic.text' | translate }}
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row">
-              {{ row.metric_Operation }}
-            </mat-cell>
-          </ng-container>
-
-          <!-- Description Column -->
-          <ng-container matColumnDef="metricsName">
-            <mat-header-cell class="ft-14-700" *matHeaderCellDef>
-              {{ 'home.new-experiment.metrics.description-header.placeholder.text' | translate }}
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row">
-              {{ row.metric_Name }}
-            </mat-cell>
-          </ng-container>
-
-          <mat-header-row *matHeaderRowDef="rewardMetricDisplayedColumns; sticky: true"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: rewardMetricDisplayedColumns"></mat-row>
-        </mat-table>
-
-        <p class="form-hint ft-12-400">
-          A reward metric is required for adaptive experiments.
-          <a class="learn-more-link" href="https://www.upgradeplatform.org/" target="_blank" rel="noopener noreferrer"
-            >Learn more</a
-          >
-        </p>
+        <div class="reward-metric-description" *ngIf="rewardMetricDataSource | async as rewardMetricData">
+          <div class="reward-metric-item" *ngFor="let row of rewardMetricData">
+            <span class="ft-14-400">
+              • Key: "{{ row.metric_Key }}"
+            </span>
+            <span class="ft-14-400">
+              • Allowed Values: ["SUCCESS", "FAILURE"]
+            </span>
+            <span class="ft-12-400">
+              Adaptive experiments require "reward" feedback to be logged from enrolled users, which will tilt the probability of experimental assignments towards conditions that receive more successful feedback. Use this key when logging metrics as a simple metric value.
+            </span>
+            <span class="ft-12-600" *ngIf="!experimentInfo">
+              UpGrade automatically creates this metric for your experiment when created, and a metric query for success rate will also be automatically applied.
+              <a class="learn-more-link" href="https://www.upgradeplatform.org/" target="_blank" rel="noopener noreferrer">Learn more</a>
+            </span>
+          </div>
+        </div>
       </div>
     </form>
   </section>
