--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.scss
@@ -2,8 +2,7 @@
   height: 515px;
   overflow-y: auto;
 
-  .metric-table,
-  .reward-metric-table {
+  .metric-table {
     margin-top: 5px;
     max-height: 207px;
     overflow: auto;
@@ -106,6 +105,15 @@
       &:hover {
         cursor: pointer;
       }
+
+      &.disabled,
+      &.remove-icon--disabled {
+        opacity: 0.5;
+
+        &:hover {
+          cursor: not-allowed;
+        }
+      }
     }
 
     .auto-complete {
@@ -138,24 +146,17 @@
   }
 
   .reward-metric-container {
-    padding-top: 32px;
+    padding-top: 16px;
 
-    .reward-metric-table {
-      mat-cell {
-        align-items: center;
+    .reward-metric-description {
+      padding: 16px 8px 0;
+      color: var(--black-2);
+
+      .reward-metric-item {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
       }
-
-      .cdk-column-queryName {
-        &.mat-mdc-cell {
-          padding-top: 0;
-        }
-      }
-    }
-
-    .form-hint {
-      text-indent: 24px;
-      margin-top: 8px;
-      margin-bottom: 0;
     }
   }
 }
