--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -933,43 +933,22 @@
             </mat-table>
           </div>
 
-          <!-- Experiment reward metric table -->
-          <div class="table-container table-container-metrics" *ngIf="experiment?.rewardMetricKey">
+          <!-- Experiment reward metric section -->
+          <div class="table-container" *ngIf="experiment?.rewardMetricKey">
             <span class="ft-24-700">{{ 'home.new-experiment.metrics.reward-metric.text' | translate }}</span>
-            <mat-table [dataSource]="displayRewardMetrics" class="table">
-              <!-- Metric Column -->
-              <ng-container matColumnDef="metricsKey">
-                <mat-header-cell class="ft-12-700" *matHeaderCellDef>
-                  {{ 'query.metric.text' | translate }}
-                </mat-header-cell>
-                <mat-cell class="ft-12-600" *matCellDef="let row">
-                  {{ row.metric_Key }}
-                </mat-cell>
-              </ng-container>
-
-              <!-- Statistic Column -->
-              <ng-container matColumnDef="metricsOperation">
-                <mat-header-cell class="ft-12-700" *matHeaderCellDef>
-                  {{ 'monitor.statistic.text' | translate }}
-                </mat-header-cell>
-                <mat-cell class="ft-12-600" *matCellDef="let row">
-                  {{ row.metric_Operation }}
-                </mat-cell>
-              </ng-container>
-
-              <!-- Description Column -->
-              <ng-container matColumnDef="metricsName">
-                <mat-header-cell class="ft-12-700" *matHeaderCellDef>
-                  {{ 'home.new-experiment.metrics.description-header.placeholder.text' | translate }}
-                </mat-header-cell>
-                <mat-cell class="ft-12-600" *matCellDef="let row">
-                  {{ row.metric_Name }}
-                </mat-cell>
-              </ng-container>
-
-              <mat-header-row *matHeaderRowDef="displayedMetricsColumns"></mat-header-row>
-              <mat-row *matRowDef="let row; columns: displayedMetricsColumns"></mat-row>
-            </mat-table>
+            <div class="reward-metric-description" *ngIf="displayRewardMetrics as rewardMetricData">
+              <div class="reward-metric-item" *ngFor="let row of rewardMetricData">
+                <span class="ft-14-400">
+                  • Key: "{{ row.metric_Key }}"
+                </span>
+                <span class="ft-14-400">
+                  • Allowed Values: ["SUCCESS", "FAILURE"]
+                </span>
+                <span class="ft-12-400">
+                  Adaptive experiments require "reward" feedback to be logged from enrolled users, which will tilt the probability of experimental assignments towards conditions that receive more successful feedback. Use this key when logging metrics as a simple metric value.
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </mat-tab>
