--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.html
@@ -284,11 +284,11 @@
         <div class="reward-metric-description" *ngIf="rewardMetricDataSource | async as rewardMetricData">
           <div class="reward-metric-item" *ngFor="let row of rewardMetricData">
             <span>
-              <span class="ft-14-600">• Key:</span>
+              <span class="ft-14-600">Key:</span>
               <span class="ft-14-400"> "{{ row.metric_Key }}"</span>
             </span>
             <span>
-              <span class="ft-14-600">• Allowed Values:</span>
+              <span class="ft-14-600">Allowed Values:</span>
               <span class="ft-14-400"> ["SUCCESS", "FAILURE"]</span>
             </span>
             <span class="ft-12-400">
