Implement experiment details page (#2563)
* Implement experiment details page

* Remove mistake part

* Make experiment details page navigation work

* Update ExperimentOverviewDetailsSectionCardComponent and ExperimentDetailsPageContentComponent

* Refine selectExperimentOverviewDetails and update CommonTabbedSectionCardFooterComponent

* Refine experiment details section card components

* Refine en.json file

* Update UpsertExperimentModalComponent to send requests with valid experiment data

* Disable Factorial Experiment Type for v2

* Refactor nested ternaries

* Add strongly-typed DTO interfaces for experiment requests

* Update timeLog type in ExperimentStateTimeLogDTO

* Update ExperimentConditionPayloadDTO to match backend

* Remove redundant comments

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
@@ -7,10 +7,10 @@
     (selectedTabChange)="onSelectedTabChange($event)"
     class="new-tab-group"
   >
-    <mat-tab *ngFor="let label of tabLabels" [disabled]="label === 'Data'">
+    <mat-tab *ngFor="let tab of tabLabels" [disabled]="tab.disabled">
       <ng-template mat-tab-label>
         <span class="ft-18-600">
-          {{ label }}
+          {{ tab.label }}
         </span>
       </ng-template>
     </mat-tab>
