--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-table/experiment-conditions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-table/experiment-conditions-table.component.html
@@ -28,7 +28,7 @@
         <span [ngSwitch]="getPayloadDisplayType(condition)">
           <span *ngSwitchCase="EXPERIMENT_PAYLOAD_DISPLAY_TYPE.UNIVERSAL">{{ getUniversalPayload(condition) }}</span>
           <span *ngSwitchCase="EXPERIMENT_PAYLOAD_DISPLAY_TYPE.SPECIFIC">{{ 'experiments.details.conditions.payload.specific-to-decision-point.text' | translate }}</span>
-          <span *ngSwitchDefault>-</span>
+          <span *ngSwitchDefault></span>
         </span>
       </td>
     </ng-container>
@@ -40,6 +40,22 @@
       </th>
       <td mat-cell *matCellDef="let condition" class="weight-column ft-14-400">
         {{ condition.assignmentWeight }}%
+      </td>
+    </ng-container>
+
+    <!-- Weight Edit Column -->
+    <ng-container matColumnDef="weightEdit">
+      <th mat-header-cell *matHeaderCellDef class="weight-edit-column ft-14-600 dense-2">
+        <button
+          mat-icon-button
+          class="weight-edit-button"
+          [disabled]="actionsDisabled || conditions.length < 2"
+          (click)="onEditWeightsClick()">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let condition" class="weight-edit-column ft-14-400">
+        <!-- Empty cell for alignment -->
       </td>
     </ng-container>
 
