--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-table/experiment-decision-points-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-table/experiment-decision-points-table.component.scss
@@ -88,7 +88,7 @@
 
           &[disabled] {
             .mat-icon {
-              opacity: 1; /* Placeholder for potential later change */
+              opacity: 0.5;
             }
           }
         }
