Implement experiment include list table component

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-section-card.component.html
@@ -21,7 +21,7 @@
     [isSectionCardExpanded]="isSectionCardExpanded && experiment.filterMode !== FILTER_MODE.INCLUDE_ALL"
     [primaryActionBtnDisabled]="experiment.filterMode === FILTER_MODE.INCLUDE_ALL"
     [sectionCardExpandBtnDisabled]="experiment.filterMode === FILTER_MODE.INCLUDE_ALL"
-    (primaryButtonClick)="onAddInclusionClick()"
+    (primaryButtonClick)="onAddIncludeListClick(experiment.context[0], experiment.id)"
     (menuButtonItemClick)="onMenuButtonItemClick($event, experiment)"
     (slideToggleChange)="onSlideToggleChange($event, experiment.id)"
     (sectionCardExpandChange)="onSectionCardExpandChange($event)"
