--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-table/experiment-inclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-table/experiment-inclusions-table.component.html
@@ -1,3 +1,10 @@
 <div class="table-container">
-  <p>experiment-inclusions-table works!</p>
+  <app-common-details-participant-list-table
+    [tableType]="tableType"
+    [dataSource]="dataSource$ | async"
+    [actionsDisabled]="actionsDisabled"
+    [isLoading]="isLoading$ | async"
+    noDataRowText="experiments.details.inclusions.card.no-data-row.text"
+    (rowAction)="onRowAction($event)"
+  ></app-common-details-participant-list-table>
 </div>
