--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -12,7 +12,7 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.TYPE | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="type-column ft-14-400">
-        {{ rowData.listType | titlecase }}
+        {{ getFormattedListType(rowData) }}
       </td>
     </ng-container>
 
