--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -12,7 +12,7 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.TYPE | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="type-column ft-14-400">
-        {{ rowData.listType }}
+        {{ getFormattedListType(rowData) }}
       </td>
     </ng-container>
 
@@ -22,9 +22,7 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.VALUES | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="values-column ft-14-400">
-        <ng-container *ngIf="rowData?.segment && rowData.listType !== memberTypes.SEGMENT">
-          {{ getValuesText(rowData) }}
-        </ng-container>
+        <ng-container *ngIf="rowData?.segment && rowData.listType?.toLowerCase() !== memberTypes.SEGMENT.toLowerCase()"> {{ getValuesText(rowData) }} </ng-container>
       </td>
     </ng-container>
 
