add test chenge

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/components/modal/duplicate-segment/duplicate-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/components/modal/duplicate-segment/duplicate-segment.component.html
@@ -18,6 +18,7 @@
   <span class="ft-14-400 validation-message" *ngIf="!isSegmentNameValid">
     {{ 'segments.new-segment-overview-stepper.segment-name-error.text' | translate }}
   </span>
+  <span>TESTING</span>
 </div>
 <div mat-dialog-actions class="duplicate-segment-dialog-actions">
   <button class="shared-modal--modal-btn" mat-flat-button (click)="onCancelClick()">
